# opencv-py-cpp-interop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py  main_easyocr.py  main_tesseract.py  main_tesseract2.py  main_yolo.py  requirements.txt
